Fixed border-spacing of fax-table, made buttons in fax-table toolbar flat, and added widget size animation to header in demo.html.

--- a/demo.html
+++ b/demo.html
@@ -9,9 +9,9 @@
 
 	<body style="background-color: #f6f6f6;">
 
-		<h1>FontAwesome Extensions Demo</h1>
+		<h1 style="transition: font-size 0.2s ease-out;">FontAwesome Extensions Demo</h1>
 
-		<form class="fax-input">
+		<form class="fax-input" style="transition: font-size 0.2s ease-out;">
 		<p>
 			<span class="fax-text">Widget size</span>
 			<label><input type="radio" name="demoSize" value="" checked onClick="document.getElementsByTagName('body')[0].className = '';">normal</label>
@@ -269,7 +269,7 @@
 			<tr>
 				<td>Nicos Anastasiades</td>
 				<td><a href="mailto:nicos@disy.org.cy">nicos@disy.org.cy</a></td>
-				<td class="fax-toolbar">
+				<td class="fax-toolbar fax-flat">
 					<a class="fax-button" href="javascript:alert('Edit clicked!');"><span class="fa fa-edit fax"><span class="fax-text">edit</span></span></a>
 					<a class="fax-button" href="javascript:alert('Delete clicked!');"><span class="fa fa-times-circle fax fax-red"><span class="fax-text fax-red">delete</span></span></a>
 				</td>
@@ -277,7 +277,7 @@
 			<tr>
 				<td>Demetris Christofias</td>
 				<td><a href="mailto:syntrofos@akel.com.cy">syntrofos@akel.com.cy</a></td>
-				<td class="fax-toolbar">
+				<td class="fax-toolbar fax-flat">
 					<a class="fax-button" href="javascript:alert('Edit clicked!');"><span class="fa fa-edit fax"><span class="fax-text">edit</span></span></a>
 					<a class="fax-button" href="javascript:alert('Delete clicked!');"><span class="fa fa-times-circle fax fax-red"><span class="fax-text fax-red">delete</span></span></a>
 				</td>
@@ -285,7 +285,7 @@
 			<tr>
 				<td>Tassos Papadopoulos</td>
 				<td><a href="mailto:tassos@heaven.otherlife.gov">tassos@heaven.otherlife.gov</a></td>
-				<td class="fax-toolbar">
+				<td class="fax-toolbar fax-flat">
 					<a class="fax-button" href="javascript:alert('Edit clicked!');"><span class="fa fa-edit fax"><span class="fax-text">edit</span></span></a>
 					<a class="fax-button" href="javascript:alert('Delete clicked!');"><span class="fa fa-times-circle fax fax-red"><span class="fax-text fax-red">delete</span></span></a>
 				</td>
@@ -293,7 +293,7 @@
 			<tr>
 				<td>Glafkos Clerides</td>
 				<td><a href="mailto:kounelaki@heaven.otherlife.gov">kounelaki@heaven.otherlife.gov</a></td>
-				<td class="fax-toolbar">
+				<td class="fax-toolbar fax-flat">
 					<a class="fax-button" href="javascript:alert('Edit clicked!');"><span class="fa fa-edit fax"><span class="fax-text">edit</span></span></a>
 					<a class="fax-button" href="javascript:alert('Delete clicked!');"><span class="fa fa-times-circle fax fax-red"><span class="fax-text fax-red">delete</span></span></a>
 				</td>
@@ -301,7 +301,7 @@
 			<tr>
 				<td>George Vassiliou</td>
 				<td><a href="mailto:master@bilderberg.org">master@bilderberg.org</a></td>
-				<td class="fax-toolbar">
+				<td class="fax-toolbar fax-flat">
 					<a class="fax-button" href="javascript:alert('Edit clicked!');"><span class="fa fa-edit fax"><span class="fax-text">edit</span></span></a>
 					<a class="fax-button" href="javascript:alert('Delete clicked!');"><span class="fa fa-times-circle fax fax-red"><span class="fax-text fax-red">delete</span></span></a>
 				</td>
@@ -309,7 +309,7 @@
 			<tr>
 				<td>Spyros Kyprianou</td>
 				<td><a href="mailto:kontos@heaven.otherlife.gov">kontos@heaven.otherlife.gov</a></td>
-				<td class="fax-toolbar">
+				<td class="fax-toolbar fax-flat">
 					<a class="fax-button" href="javascript:alert('Edit clicked!');"><span class="fa fa-edit fax"><span class="fax-text">edit</span></span></a>
 					<a class="fax-button" href="javascript:alert('Delete clicked!');"><span class="fa fa-times-circle fax fax-red"><span class="fax-text fax-red">delete</span></span></a>
 				</td>
@@ -317,7 +317,7 @@
 			<tr>
 				<td>Makarios III</td>
 				<td><a href="mailto:inmate4903@hell.otherlife.gov">inmate4903@hell.otherlife.gov</a></td>
-				<td class="fax-toolbar">
+				<td class="fax-toolbar fax-flat">
 					<a class="fax-button" href="javascript:alert('Edit clicked!');"><span class="fa fa-edit fax"><span class="fax-text">edit</span></span></a>
 					<a class="fax-button" href="javascript:alert('Delete clicked!');"><span class="fa fa-times-circle fax fax-red"><span class="fax-text fax-red">delete</span></span></a>
 				</td>
